--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -151,6 +151,7 @@ pipeline_delay_activation_forwarding: False # This delays the activation forward
 # Choose 'remat_policy' between 'minimal', 'save_dot_except_mlpwi', 'save_dot_except_mlp', 'save_qkv_proj', 'qkv_proj_offloaded', 'minimal_offloaded', 'save_out_proj' and 'full'.
 # These options offer a trade-off between speed (fastest to slowest) and HBM usage (highest to lowest)
 remat_policy: 'full'
+optimizer_host_offload: True
 scan_layers: True
 param_scan_axis: 1
 
